<resources>
    <string name="app_name">Carbon Free</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="start">Start</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="vp_fifth_screen_text">Get Started With Carbon Free!</string>

    <string name="vp_first_screen_text">
        Hello There, Welcome to Carbon Free. Click Next to Find Out More.
    </string>

    <string name="vp_fourth_screen_text">
        Carbon Free Uses Google Maps To blah blah blah Carbon Free Carbon Free Carbon Free.
    </string>

    <string name="vp_third_screen_text">
        Carbon Free Uses Scheduled Notifications To Remind Users blah blah blah Carbon Free Carbon Free Carbon Free.
    </string>
    <string name="vp_second_screen_text">
        Reduce Your Carbon Foot-Print Carbon Free Carbon Free Carbon Free Carbon Free.
    </string>

    <string name="home_title_text">
        Hello You!
    </string>

    <string name="home_sub_text">
        Global climate change is the existential threat of our time.
        It’s caused by human activity, and its impacts —rising sea levels,
        extreme weather and natural disasters, food insecurity, and economic instability,
        among others—disproportionately affect the most vulnerable people,
        those least responsible for it, and those least able to adapt to its effects.
    </string>
    <string name="home_sub_sub_text">
        With this app, we will be addressing ways to tackle climate change and the role we have to
        play to reduce our carbon footprint.
    </string>

</resources>