<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.main.FirstFragment"
    android:padding="20dp">

    <TextView
        android:id="@+id/home_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/home_title_text"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/home_img"
        android:layout_width="388dp"
        android:layout_height="285dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/eco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_title" />

    <TextView
        android:id="@+id/home_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/home_sub_text"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/home_title"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/home_img" />

    <TextView
        android:id="@+id/home_sub_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/home_sub_sub_text"
        android:textSize="20sp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_sub_title" />


</androidx.constraintlayout.widget.ConstraintLayout>